--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -9,8 +9,48 @@ linkedin: https://www.linkedin.com
 github: https://github.com
 ---
 
-Tails Azimuth is a professor of atmospheric sciences at the Stanford AI Lab. His research interests includes complexity modelling of tailwinds, headwinds and crosswinds.
+### 介紹
 
-He leads the clean energy group which develops 3D air pollution-climate models, writes differential equation solvers, and manufactures titanium plated air ballons. In his free time he bakes raspberry pi.
+探房筆記，希望以實坪切入，提供另一種不同的視角。BTW，筆記內所有數據皆為手動整理，若有錯誤，在麻煩指正，希望大家都能找到 **理想中的房子**。
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque elit, tristique placerat feugiat ac, facilisis vitae arcu. Proin eget egestas augue. Praesent ut sem nec arcu pellentesque aliquet. Duis dapibus diam vel metus tempus vulputate.
+---
+
+### Information
+
+- [免責聲明](https://fangnote.github.io/about/disclaimer)
+- [聯絡資訊](https://fangnote.github.io/about/contact)
+- [Sitemap](https://fangnote.github.io/sitemap.xml)
+
+---
+
+### 數據來源
+
+- 實價登錄
+  - 新建案資訊:[預售屋建案查詢](https://lvr.land.moi.gov.tw/)
+  - 新建案交易:[預售屋查詢](https://lvr.land.moi.gov.tw/)
+
+---
+
+### 數據定義
+- 本資料僅供參考，若有錯誤請來信更正
+
+#### 新建案
+
+- 如何歸屬預售屋交易於預售屋建案？
+  - 依據預售屋交易所登記的“土地地號”，若與預售屋建案登記的地號重疊，即被歸屬為此建案交易。
+- 實坪
+  - 為室內可使用坪數，扣除公設，雨遮，陽台等。
+  - 預售屋，有些交易並不會標明完整坪數資訊，故予以排除。
+- 銷售率
+  - 交易數量除與建案登記戶數，故如建案包含公宅等，可能會與實際有若差。
+- 統計數據
+  - 只統計完整紀錄的交易，需包含細節坪數分佈，總價可區分房車價格等。
+
+---
+
+#### 一般買賣交易
+
+- 統計數據
+  - 同一日同一地址，建物為持分移轉，只會紀錄為一筆。
+
+---
