--- a/data/blog/新北市/2024八里區公寓房價.mdx
+++ b/data/blog/新北市/2024八里區公寓房價.mdx
@@ -7,7 +7,7 @@ categories:
 tags: 
     - 區域房價
 keywords: 2024八里區公寓房價,八里區房價,八里區實坪價格,八里區公寓房屋交易,八里區房價變化,區域房價
-description: 2024八里區公寓房價呈現上漲趨勢，實坪均價由去年17.2萬上升至今年25.9萬。
+summary: 2024八里區公寓房價呈現上漲趨勢，實坪均價由去年17.2萬上升至今年25.9萬。
 ---
 
 
