--- a/data/blog/桃園市/(立信)W  Modern.mdx
+++ b/data/blog/桃園市/(立信)W  Modern.mdx
@@ -10,7 +10,7 @@ tags:
     - 住宅
     - 商業區
 keywords: (立信)W  Modern,(立信)W  Modern開價,立信工營造公司,(112)桃市都建執照字第會桃01181,桃園區復興路以北. 朝陽街二段以南，安樂街以東所圍成街廓範圍內桃園市,桃園區,桃園段武陵小段31-5地號,桃園段武陵小段31-12地號,桃園段武陵小段186-1地號,桃園段武陵小段190地號,桃園段武陵小段194地號,桃園段武陵小段194-1地號,桃園段武陵小段195地號,桃園段武陵小段196地號,桃園段武陵小段197地號,桃園段武陵小段31-13地號,桃園段武陵小段31-24地號,桃園段武陵小段31-25地號,桃園段武陵小段31-26地號,桃園段武陵小段31-27地號,桃園段武陵小段183地號,桃園段武陵小段185地號,桃園段武陵小段186地號,
-description:  (立信)W  Modern，位於"桃園區復興路以北. 朝陽街二段以南，安樂街以東所圍成街廓範圍內"的新建案。由"立信工營造股份有限公司"申請，共計246戶，土地用途為"商業區"，建築用途為"G3店鋪，H2集合住宅， G2辦公類場所"。申請於2024-04-18，建號為(112)桃市都建執照字第會桃01181。 
+summary:  (立信)W  Modern，位於"桃園區復興路以北. 朝陽街二段以南，安樂街以東所圍成街廓範圍內"的新建案。由"立信工營造股份有限公司"申請，共計246戶，土地用途為"商業區"，建築用途為"G3店鋪，H2集合住宅， G2辦公類場所"。申請於2024-04-18，建號為(112)桃市都建執照字第會桃01181。 
 ---
 
 
